tests/build/fail/widget_new/missing_semi.stderr
error: expected `,` or `;`
 --> $DIR/missing_semi.rs:7:18
  |
7 |         margin = 0
  |                  ^

warning: unused import: `margin`
 --> $DIR/missing_semi.rs:2:57
  |
2 | use zero_ui::properties::{cursor, drag_move::draggable, margin};
  |                                                         ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
